--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,27 @@ name: ci
 
 on:
   push:
+    branches: ["main"]
   pull_request:
+
+permissions:
+  contents: read
 
 jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
+
       - run: python -m pip install -U pip
-      - run: pip install -e . pytest
-      - run: pytest
+      - run: pip install -e . pytest pytest-cov ruff
+
+      - run: ruff check .
+      - run: ruff format --check .
+
+      - run: pytest --cov=password_policy_analyzer --cov-report=term-missing
