--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,12 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP"]
+
+[tool.coverage.run]
+branch = true
+source = ["password_policy_analyzer"]
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
+fail_under = 70
